--- a/src/styles.css
+++ b/src/styles.css
@@ -1,39 +1,94 @@
+* {
+  padding: 0;
+  margin: 0;
+}
+:root {
+  --main-bg-color: #172d46;
+  --dark-bg-color: #061726;
+  --main-tx-color: #e7eaf6;
+  --second-tx-color: #d07969;
+}
+
 body {
-  background-color: #172d46;
-  color: #e7eaf6;
+  background-color: var(--main-bg-color);
+  color: var(--main-tx-color);
 }
 
-h1 {
-  text-align: center;
+.container {
+  width: 100%;
+  height: 100vh;
+  background-color: var(--main-bg-color);
 }
-#icon {
+.box {
+  width: 30%;
+  height: 100vh;
+  background-color: var(--dark-bg-color);
   position: absolute;
-  top: 10px;
-  left: 10px;
-  width: 50px;
-  height: 50px;
-  background: #e7eaf6;
-  border-radius: 5px;
+  text-align: left;
+  z-index: 1;
+  opacity: 0;
+  left: -500px;
+  pointer-events: none;
+  transition: 0.3s;
+}
+.active.box {
+  opacity: 1;
+  left: 0px;
+  pointer-events: fill;
+}
+.menu_icon_box {
+  z-index: 2;
+  width: fit-content;
+  height: auto;
+  background-color: var(--second-tx-color);
+  opacity: 0.6;
+  margin: 30px;
+  position: absolute;
+  border-radius: 4px;
   cursor: pointer;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+}
+.line1,
+.line2,
+.line3 {
+  width: 20px;
+  height: 2px;
+  margin: 5px 4px;
+  background-color: var(--dark-bg-color);
+  border-radius: 50px;
+  transition: 0.2s;
+}
+.active .line1 {
+  transform: translate(0px, 7px) rotate(45deg);
+}
+.active .line2 {
+  opacity: 0;
+}
+.active .line3 {
+  transform: translate(0px, -7px) rotate(-45deg);
+}
+nav {
+  padding-top: 100px;
+}
+nav ul {
+  margin: 0px 30px;
+}
+nav ul li {
+  list-style: none;
+  margin-bottom: 30px;
+  transition: 0.2s;
+}
+nav ul li a {
+  color: var(--main-tx-color);
+  font-size: 28px;
+  padding: 10px 30px;
+  display: block;
+  text-decoration: none;
 }
 
-#icon::before {
-  content: "";
-  position: absolute;
-  width: 25px;
-  height: 2px;
-  background: #061726;
-  transform: translateY(-10px);
-}
-
-#icon::after {
-  content: "";
-  position: absolute;
-  width: 25px;
-  height: 2px;
-  background: #061726;
-  transform: translateY(10px);
+@media screen and (min-width: 992px) {
+  .navbar .container-fluid,
+  .navbar-expand-lg .navbar-collapse,
+  .navbar-expand-lg .navbar.nav {
+    flex-direction: column;
+  }
 }
