--- a/src/styles.css
+++ b/src/styles.css
@@ -14,7 +14,7 @@ body {
   color: var(--main-tx-color);
 }
 
-.container {
+.container1 {
   width: 100%;
   height: 100vh;
   background-color: var(--main-bg-color);
@@ -90,5 +90,11 @@ nav ul li a {
   .navbar-expand-lg .navbar-collapse,
   .navbar-expand-lg .navbar.nav {
     flex-direction: column;
+  }
+  .navbar {
+    width: 25%;
+    height: 100vh;
+  }
+  .navbar-brand {
   }
 }
